tests/errors/syntax-function.lua
local x = 0
function f()
    x = x + 1
    print(;
end
